POR/RefEdge/src/objects/RefSearch_Usage_Track__c.object
<CustomObject>
    <description>It maintains daily visit count for users when they reach the reference search page. Which will provide indication of adoption, even if a request or invitation is never generated.</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Contains the date when the particular person uses ref search page.</description>
        <label>Activity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ref Search Usage Tracks</relationshipLabel>
        <relationshipName>Ref_Search_Usage_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filter_Applied_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Filter Applied Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Ref Search Usage Tracks</relationshipLabel>
        <relationshipName>Ref_Search_Usage_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ref Search Usage Tracks</relationshipLabel>
        <relationshipName>Ref_Search_Usage_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prefilter_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prefilter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refcontent_Link_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refcontent Link Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <description>Contains source name - entry point to the Ref Search page</description>
        <label>Referrer</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Search_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Text Search Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It contains the count - how many time a person comes to the ref search page on a day</description>
        <label>Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains user id for the person who uses ref search page</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RefSearch_Usage_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ref Search Usage Track</label>
    <nameField>
        <displayFormat>RSU-{00000000}</displayFormat>
        <label>RefSearch Usage Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Search Usage Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>